--- a/_config.yml
+++ b/_config.yml
@@ -1,29 +1,17 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely edit after that. If you find
-# yourself editing this file very often, consider using Jekyll's data files
-# feature for the data you need to update frequently.
-#
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'bundle exec jekyll serve'. If you change this file, please restart the server process.
-#
-# If you need help with YAML syntax, here are some quick references for you:
-# https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
-# https://learnxinyminutes.com/docs/yaml/
-#
-# Site settings
-# These are used to personalize your new site. If you look in the HTML files,
-# you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
-# You can create any custom variable you would like, and they will be accessible
-# in the templates via {{ site.myvariable }}.
-
 title: SCastanedaMunoz
 
 author:
   name: Santiago Castaneda Munoz
+  location: "Austin, Texas"
   avatar: "/assets/images/avatar.jpg"
   bio: "Software Engineer with over 6 years in multiplatform game development, specializing in the mobile gaming industry"
+  links:
+    - label: "GitHub"
+      icon: "fab fa-github"
+      url: "https://github.com/SCastanedaMunoz"
+    - label: "LinkedIn"
+      icon: "fab fa-linkedin"
+      url: "https://www.linkedin.com/in/santiagocastanedamunoz/"
 
 email: santiagocm98@hotmail.com
 description: "A portfolio to showcase my projects, experience, and blog posts."
@@ -33,6 +21,7 @@ domain: scastanedamunoz.github.io
 url: https://scastanedamunoz.github.io 
 
 data_dir: _data
+permalink: pretty
 
 # Build settings
 remote_theme: "mmistakes/minimal-mistakes@4.26.2"
@@ -44,11 +33,11 @@ plugins:
 
 defaults:
   - scope:
-      path: ""
-      type: "posts"
-    values:
-      layout: single
-  - scope:
       path: "_pages"
+      type: pages
     values:
       layout: page
+
+collections:
+  pages:
+    output: true
