--- a/_config.yml
+++ b/_config.yml
@@ -36,8 +36,17 @@ defaults:
       path: "_pages"
       type: pages
     values:
-      layout: page
+      layout: single
+      author_profile: true
 
-collections:
-  pages:
-    output: true
+include:
+  - _pages
+
+footer:
+  links:
+    - label: "GitHub"
+      icon: "fab fa-fw fa-github"
+      url: "https://github.com/SCastanedaMunoz"
+    - label: "LinkedIn"
+      icon: "fab fa-fw fa-linkedin"
+      url: "https://www.linkedin.com/in/santiagocastanedamunoz/"
